--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   http: ^1.6.0
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
