--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "mpx" "\0"
+            VALUE "FileDescription", "Weather" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "mpx" "\0"
+            VALUE "InternalName", "Weather" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "mpx.exe" "\0"
-            VALUE "ProductName", "mpx" "\0"
+            VALUE "OriginalFilename", "Weather.exe" "\0"
+            VALUE "ProductName", "Weather" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
