--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   flutter_localizations:
     sdk: flutter
+  intl: ^0.20.2
   http: ^1.6.0
   geolocator: ^10.1.0
   shared_preferences: ^2.2.3
@@ -69,6 +71,8 @@ flutter_launcher_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
